<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View"/>
        <variable name="viewModel" type="be.verswijvelt.casper.beerio.ui.viewModels.AddBeerViewModel"/>
    </data>

    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:padding="20dp">


            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <EditText
                        android:text="@={viewModel.name}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/nameInput"
                        android:singleLine="true"
                        android:hint="@string/beer_name"
                        android:importantForAutofill="no"
                        tools:targetApi="o"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <EditText
                        android:text="@={viewModel.description}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:ems="10"
                        android:id="@+id/descriptionInput"
                        android:singleLine="false"
                        android:hint="@string/beer_description"
                        android:importantForAutofill="no"
                        tools:targetApi="o"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <EditText
                        android:text="@={viewModel.foodPairings}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:ems="10"
                        android:id="@+id/foodPairingsInput"
                        android:singleLine="false"
                        android:hint="@string/food_pairings"
                        android:importantForAutofill="no"
                        tools:targetApi="o"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <EditText
                        android:text="@={viewModel.originalGravity}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textShortMessage"
                        android:ems="10"
                        android:id="@+id/originalGravityInput"
                        android:singleLine="true"
                        android:hint="@string/original_gravity"
                        android:importantForAutofill="no"
                        tools:targetApi="o"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <EditText
                        android:text="@={viewModel.alcoholByVolume}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textShortMessage"
                        android:ems="10"
                        android:id="@+id/alcoholByVolumeInput"
                        android:singleLine="true"
                        android:hint="@string/alcohol_by_volume"
                        android:importantForAutofill="no"
                        tools:targetApi="o"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <EditText
                        android:text="@={viewModel.internationalBitteringUnit}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textShortMessage"
                        android:ems="10"
                        android:id="@+id/internationalBitteringUnitInput"
                        android:singleLine="true"
                        android:hint="@string/international_bittering_unit"
                        android:importantForAutofill="no"
                        tools:targetApi="o"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <EditText
                        android:text="@={viewModel.servingTemperature}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textShortMessage"
                        android:ems="10"
                        android:id="@+id/servingTemperatureInput"
                        android:singleLine="true"
                        android:hint="@string/serving_temperature"
                        android:importantForAutofill="no"
                        tools:targetApi="o"/>
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="55dp">
                <TextView
                        android:text="@string/year"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/textView2"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:minHeight="40dp"
                        android:gravity="center_vertical"
                        android:textColor="@android:color/black"/>
                <Button
                        android:text='@{""+viewModel.year}'
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/yearButton"
                        android:layout_weight="0"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:textColor="@color/design_default_color_primary"
                        android:textAlignment="textEnd"
                        android:textSize="18sp"/>
            </LinearLayout>
            <Switch
                    android:checked="@={viewModel.organic}"
                    android:text="@string/is_organic"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:id="@+id/isOrganicSwitch"
                    android:layout_weight="1"
                    android:minHeight="40dp"
                    android:textSize="18sp"/>
            <Switch
                    android:checked="@={viewModel.retired}"
                    android:text="@string/is_retired"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:id="@+id/isRetiredSwitch"
                    android:layout_weight="1"
                    android:minHeight="40dp"
                    android:textSize="18sp"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="55dp">
                <TextView
                        android:text="@string/bottle_label"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:minHeight="40dp"
                        android:gravity="center_vertical"
                        android:textColor="@android:color/black"/>

                <LinearLayout android:layout_width="wrap_content"
                              android:layout_height="match_parent">
                    <ImageButton
                            android:layout_height="match_parent"
                            android:id="@+id/showSelectedImageButton"
                            android:layout_weight="1"
                            style="@style/Widget.AppCompat.ImageButton"
                            android:textColor="@color/design_default_color_primary"
                            android:textAlignment="textEnd"
                            android:src="@drawable/ic_image_black_24dp"
                            android:tint="@color/design_default_color_primary_dark"
                            android:background="@android:color/transparent"
                            android:visibility='@{!viewModel.selectedImage.isEmpty() ? View.VISIBLE : View.GONE}'


                            android:contentDescription="@string/show_image"
                            android:layout_width="40dp"/>
                    <ImageButton
                            android:layout_width="40dp"
                            android:layout_height="match_parent"
                            android:id="@+id/removeSelectedImageButton"
                            android:layout_weight="0"
                            style="@style/Widget.AppCompat.ImageButton"
                            android:textColor="@color/design_default_color_primary"
                            android:textAlignment="textEnd"
                            android:src="@drawable/ic_close_black_24dp"
                            android:background="@android:color/transparent"
                            android:tint="@color/design_default_color_primary"
                            android:visibility='@{!viewModel.selectedImage.isEmpty() ? View.VISIBLE : View.GONE}'
                            android:contentDescription="@string/remove_image"/>

                    <Button
                            android:text="@string/select_image"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/selectImageButton"
                            android:layout_weight="0"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:textColor="@color/design_default_color_primary"
                            android:textAlignment="textEnd"
                            android:textSize="18sp"
                            android:visibility='@{viewModel.selectedImage.isEmpty() ? View.VISIBLE : View.GONE}'
                            android:textAllCaps="false"/>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</layout>
