<resources>
    <string name="app_name">Beerio</string>
    <string name="no_beers_found_for_style">No beers could be found for this style</string>
    <string name="internet_disconnected_or_apikey_invalid">Something went wrong while trying to load this data. Check if
        you are connected to the internet and see if your API key is valid.
    </string>
    <string name="beer_name">Beer name</string>
    <string name="beer_description">Beer description</string>
    <string name="food_pairings">Food pairings</string>
    <string name="original_gravity">Original gravity</string>
    <string name="alcohol_by_volume">Alcohol by volume</string>
    <string name="international_bittering_unit">International bittering unit</string>
    <string name="serving_temperature">Serving temperature</string>
    <string name="year">Year</string>
    <string name="is_organic">Is organic</string>
    <string name="is_retired">Is retired</string>
    <string name="bottle_label">Bottle label</string>
    <string name="show_image">Show image</string>
    <string name="remove_image">Remove image</string>
    <string name="select_image">Select image</string>
    <string name="my_beers">My Beers</string>
    <string name="browse_online">Browse Online</string>
    <string name="save_beer_locally">Save beer locally</string>
    <string name="delete_from_local_library">Delete from local library</string>
    <string name="edit_beer">Edit this beer</string>
    <string name="save_edited_created_beer">Save edited/created beer</string>
    <string name="settings">Settings</string>
    <string name="beer_icon_contentdescription">Icon image of a specific beer</string>
    <string name="name_of_beer">Name of beer</string>
    <string name="saved_indicator_contentdescription">Image indicating whether this beer has been saved or not</string>
    <string name="key">Key</string>
    <string name="show_image_arrow_contentdescription">Image of small arrow that if pressed shows the image of this
        beer
    </string>
    <string name="value">Value</string>
    <string name="categoryname_placeholder">CategoryName</string>
    <string name="categorydescription_placeholder">CategoryDescription</string>
    <string name="beername_placeholder">BeerName</string>
    <string name="stylename_placeholder">StyleName</string>
    <string name="header_placeholder">Header</string>
    <string name="beer_year">Beer year</string>
    <string name="cancel_yearpicker_contentdescription">Cancel button for year selection</string>
    <string name="apply_yearpicker_contentdescription">Apply button for year selection</string>
    <string name="no_styles_found_for_category">No styles could be found for this category</string>
    <string name="fill_in_name">Fill in at least a name for your beer</string>
    <string name="missing_information">Missing information</string>
    <string name="delete_beer_confirmation">Are you sure you want to remove this beer from your local library? Doing
        this will also remove all your notes for this beer.
    </string>
    <string name="delete_beer_dialogtitle">Delete beer</string>
    <string name="add_note">Add note</string>
    <string name="add">Add</string>
    <string name="year_picker_title">Year picker</string>
    <string name="selected_image_toolbartitle">Selected image</string>
    <string name="add_new_beer_toolbartitle">Add new beer</string>
    <string name="edit_beer_toolbartitle">Edit beer</string>
    <string name="api_key_valid">This API key is valid</string>
    <string name="api_key_invalid">This API key is not valid</string>
    <string name="settings_toolbartitle">Settings</string>
    <string name="my_beers_toolbartitle">My beers</string>
    <string name="categories_toolbartitle">Beer categories</string>
    <string name="bottle_label_prefix">Bottle label:</string>
    <string name="no_beers_saved">You don\'t have any beers saved yet, go add some!</string>
    <string name="more_info">More info</string>
    <string name="copy_image_url">Copy image URL</string>
    <string name="data_courtesy_brewerydb">Data courtesy of BreweryDB</string>
    <string name="saved_on">Saved on</string>
    <string name="other">Other</string>
    <string name="notes">Notes</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="basic_info">Basic Info</string>
    <string name="numbers_and_stuff">Numbers and stuff</string>
    <string name="beer_deleted">Beer deleted!</string>
    <string name="beer_Saved">Beer saved!</string>
    <string name="note_added">Note added!</string>
    <string name="wifi_connected_reloading">Connected, trying to reload data…</string>
    <string name="image_url_copied">Image URL copied to clipboard</string>
    <string name="approve_permissions">You must approve the asked permissions to select an image.</string>
</resources>
