...
                  android:textStyle="bold"
                  android:textColor="@android:color/white"
                  android:text="@string/beer_year"/>
    </LinearLayout>
    <NumberPicker

            android:id="@+id/yearpickerNumberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

    <LinearLayout
            android:layout_width="match_parent"
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_close_black_24dp"
                android:contentDescription="@string/cancel_yearpicker_contentdescription"/>

        <ImageButton
                android:id="@+id/yearPickerSetButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_check_black_24dp"
                android:contentDescription="@string/apply_yearpicker_contentdescription"/>

...
